--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   ],
   "dependencies": {
     "emitus": "^2.3.2",
-    "imgz": "^0.0.2"
+    "imgz": "^0.0.2",
+    "react-parallax-tilt": "^1.3.41",
   },
   "devDependencies": {
     "@types/jasmine": "^3.3.10",
@@ -52,7 +53,7 @@
     "karma-typescript": "^4.0.0",
     "node-sass": "^4.9.3",
     "parcel-bundler": "^1.12.2",
-    "rollup": "^1.6.0",
+    "rollup": "^2.7.1",
     "rollup-plugin-commonjs": "^9.1.5",
     "rollup-plugin-node-resolve": "^4.0.1",
     "rollup-plugin-terser": "^4.0.4",
